add favicon for wenyan; use object instead of array in JSON to enhance security

--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -5,11 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="文言文在线翻译,文言文机器翻译,文言文翻译器,古文翻译">
 <title>文言文在线翻译</title>
+<link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
 <link rel="stylesheet" href="/static/wenyan.css">
-<!--
-<link rel="stylesheet" href="/static/grids-responsive-min.css">
--->
 <script>var c2mtxt = "文言文→现代文", m2ctxt = "现代文→文言文";
 var talign = {{ talign|default('[]') }};</script>
 <script src="/static/wenyan.js"></script>
