--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -5,11 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="文言文線上翻譯,文言文機器翻譯,文言文翻譯器,古文翻譯">
 <title>文言文線上翻譯</title>
+<link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
 <link rel="stylesheet" href="/static/wenyan.css">
-<!--
-<link rel="stylesheet" href="/static/grids-responsive-min.css">
--->
 <script>var c2mtxt = "文言文→現代文", m2ctxt = "現代文→文言文";
 var talign = {{ talign|default('[]') }};</script>
 <script src="/static/wenyan.js"></script>
