--- a/diy/templates/buka_zhtw.html
+++ b/diy/templates/buka_zhtw.html
@@ -79,9 +79,13 @@ document.getElementById("fgeturl").onsubmit = showwait;
 {% if links %}
 <h2>說明：</h2>
 <p>
-請將下載檔名從例如“{{ mid }}-{{ links[0][0] }}-20141004004712.h.dat”格式改成“{{ links[0][0] }}.buka”(安卓)或“pack.dat”(iOS)，即可使用。<br>下載以下的 chaporder.dat 並放入相應漫畫編號目錄可使布卡能顯示正確的目錄列表以便進一步操作。</p><p>
-<a class="bukabutton" href="?f=c&mid={{ mid }}">重新生成的 chaporder.dat</a></p><p>
+請將下載檔名從例如“{{ mid }}-{{ links[0][0] }}-20141004004712.h.dat”格式改成“{{ links[0][0] }}.buka”(安卓)或“pack.dat”(iOS)，即可使用。<br>下載以下的 chaporder.dat 並放入相應漫畫編號目錄可使布卡能顯示正確的目錄列表以便進一步操作。</p>
+{% if coavail %}
+<p>
+<a class="bukabutton" href="?f=c&mid={{ mid }}">重新生成的 chaporder.dat</a></p>
+<p>
 注：此檔案為自動生成，缺少部分資訊。若有原檔案，無需替換。檔名必須為“chaporder.dat”。</p>
+{% endif %}
 <h2>直接下載：</h2>
 <div id="furllist">
 {% for link in links %}
