improve some text in webpages

--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
 <link rel="stylesheet" href="/static/wenyan.css">
-<script>var c2mtxt = "文言文→现代文", m2ctxt = "现代文→文言文";
+<script>var c2mtxt = "文言文→白话文", m2ctxt = "白话文→文言文";
 var talign = {{ talign|default('[]') }};</script>
 <script src="/static/wenyan.js"></script>
 </head>
