--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
 <link rel="stylesheet" href="/static/wenyan.css">
-<script>var c2mtxt = "文言文→現代文", m2ctxt = "現代文→文言文";
+<script>var c2mtxt = "文言文→白話文", m2ctxt = "白話文→文言文";
 var talign = {{ talign|default('[]') }};</script>
 <script src="/static/wenyan.js"></script>
 </head>
