--- a/diy/static/wenyan_.css
+++ b/diy/static/wenyan_.css
@@ -80,8 +80,12 @@ input[type="radio"]:invalid {
     padding: 0 .4em;
 }
 
+.short_text {
+    font-size: 24px;
+}
+
 #tinputgroup, #tinput, #toutput {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.25em;
 }
 
