--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -15,7 +15,7 @@ var talign = {{ talign|default('[]') }};</script>
 <body>
 <div id="container">
 <header>
-<h1 id="pagetitle">文言文翻譯<span id="ver">測試版</span></h1>
+<h1 id="pagetitle">文言文翻譯<span id="ver"></span></h1>
 </header>
 <section id="appmain" class="row rmd">
 <div class="col c6">
