--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -15,7 +15,7 @@ var talign = {{ talign|default('[]') }};</script>
 <body>
 <div id="container">
 <header>
-<h1 id="pagetitle">文言文翻译<span id="ver">测试版</span></h1>
+<h1 id="pagetitle">文言文翻译<span id="ver"></span></h1>
 </header>
 <section id="appmain" class="row rmd">
 <div class="col c6">
