--- a/diy/templates/translate.html
+++ b/diy/templates/translate.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="文言文在线翻译,文言文机器翻译,文言文翻译器,古文翻译">
+<meta name="description" content="提供基于统计机器翻译的文言文在线翻译服务。">
 <title>文言文在线翻译</title>
 <link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
