--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="文言文線上翻譯,文言文機器翻譯,文言文翻譯器,古文翻譯">
+<meta name="description" content="提供基於統計機器翻譯的文言文線上翻譯服務。">
 <title>文言文線上翻譯</title>
 <link rel="shortcut icon" href="/static/wenyan.png">
 <link rel="stylesheet" href="/static/min.css">
