--- a/diy/templates/translate_zhtw.html
+++ b/diy/templates/translate_zhtw.html
@@ -17,6 +17,7 @@ var talign = {{ talign|default('[]') }};</script>
 <div id="container">
 <header>
 <h1 id="pagetitle">文言文翻譯<span id="ver"></span></h1>
+<a href="about" id="aboutlink">關於</a>
 </header>
 <section id="appmain" class="row rmd">
 <div class="col c6">
