--- a/diy/templates/username_zhtw.html
+++ b/diy/templates/username_zhtw.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="使用者名稱">
-<meta name="description" content="批量生成使用者名稱">
+<meta name="description" content="批次生成使用者名稱">
 <title>使用者名稱生成器</title>
 <link rel="stylesheet" href="/static/min.css">
 <link rel="stylesheet" href="/static/style.css">
